--- a/contact.css
+++ b/contact.css
@@ -99,12 +99,12 @@ body {
 }
 
 .box p {
-    position: absolute;
-    right: 0;
-    top: 0;
+    position: fixed;
+    right: 5vw;
     display: none;
-    color: red;
-    font-size: 12px;
+    color: white;
+    font-size: 1vw;
+    font-weight: bold;
 }
 
 .btn-div {
@@ -163,5 +163,8 @@ body {
     .btn {
         width: 80px;
         font-size: 10px;
+    }
+    .box p {
+        font-size: 1.3vw;
     }
 }
